# pyseq

./: .buildinfo  .gitignore  AUTHORS  CHANGELOG  CHANGELOG.md  CNAME  LICENSE  README  README.md  README.rst  TODO  __init__.py  dist.json  genindex.html  index.html  lss  lss.bat  objects.inv  py-modindex.html  pyproject.toml  pyseq.env  pyseq.py  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: tests.yml
_sources/: index.rst.txt  index.txt
doc/: Makefile  conf.py  index.rst
doctrees/: environment.pickle  index.doctree
lib/pyseq/: __init__.py  config.py  logger.py  lss.py  pyseq.py  scopy.py  sdiff.py  seq.py  sfind.py  smove.py  sremove.py  sstat.py  stree.py  util.py
tests/: conftest.py  test_cli_interrupts.py  test_config.py  test_lss.py  test_pyseq.py  test_scopy.py  test_sdiff.py  test_sfind.py  test_smove.py  test_srm.py  test_sstat.py  test_stree.py
