[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyseq"
dynamic = ["version"]
description = "Compressed File Sequence String Module"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Ryan Galloway", email = "ryan@rsgalloway.com" },
]
urls = { Homepage = "http://github.com/rsgalloway/pyseq" }
optional-dependencies = { dev = ["pytest"], test = ["pytest"] }

[project.scripts]
lss = "pyseq.lss:main"
scopy = "pyseq.scopy:main"
sdiff = "pyseq.sdiff:main"
sfind = "pyseq.sfind:main"
smv = "pyseq.smove:main"
srm = "pyseq.sremove:main"
sstat = "pyseq.sstat:main"
stree = "pyseq.stree:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-dir]
"" = "lib"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.dynamic]
version = { attr = "pyseq.__version__" }
